Finished transitioning TokenManager. Still need to rework TokenCommand